error_logs.txt
[2024-08-21 18:58:37] Traceback (most recent call last):
  File "C:\Users\dia\PycharmProjects\sang_bot\bot.py", line 32, in load_commands
    command_handler = importlib.import_module(f"{path.replace('/', '.').rstrip('.')}.{command[:-3]}")
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Program Files\WindowsApps\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\dia\PycharmProjects\sang_bot\slash_commands\reminders.py", line 5, in <module>
    @tree.command(name="ping", description="check if the bot is online", guild=discord.Object(id = settings.guild_id))
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\dia\PycharmProjects\sang_bot\venv\Lib\site-packages\discord\app_commands\tree.py", line 944, in decorator
    self.add_command(command, guild=guild, guilds=guilds)
  File "C:\Users\dia\PycharmProjects\sang_bot\venv\Lib\site-packages\discord\app_commands\tree.py", line 394, in add_command
    raise CommandAlreadyRegistered(name, guild_id)
discord.app_commands.errors.CommandAlreadyRegistered: Command 'ping' already registered.

[2024-08-21 20:01:34] Traceback (most recent call last):
  File "C:\Users\dia\PycharmProjects\sang_bot\bot.py", line 32, in load_commands
    command_handler = importlib.import_module(f"{path.replace('/', '.').rstrip('.')}.{command[:-3]}")
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Program Files\WindowsApps\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\dia\PycharmProjects\sang_bot\slash_commands\reminders.py", line 8, in <module>
    async def reminders(interaction: discord.Interaction, name: Literal["drop", "work", "daily"], enable: bool):
                                                                ^^^^^^^
NameError: name 'Literal' is not defined

[2024-08-21 21:00:06] Traceback (most recent call last):
  File "C:\Users\dia\PycharmProjects\sang_bot\bot.py", line 50, in load_events
    event_handler = importlib.import_module(f"{path.replace('/', '.').rstrip('.')}.{event_name}").handle
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Program Files\WindowsApps\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\dia\PycharmProjects\sang_bot\events\on_ready.py", line 9, in <module>
    import reminder_handler
  File "C:\Users\dia\PycharmProjects\sang_bot\reminder_handler.py", line 41
    await
         ^
SyntaxError: invalid syntax

